assets/styles/_embed-mixins.scss
/* ... */
@mixin embed-filters-list () {

    @include disable-select;
    flex: 1 1 100%;
    display: flex;
    flex-wrap: wrap;
    box-sizing: border-box;
    padding: calc(var(--#{$instance-id}-gutter-width) / 4) calc(var(--#{$instance-id}-gutter-width) / 2);

    &-item {
        margin-right: .5em;
        margin-bottom: .5em;
        line-height: 1em;
        padding: .5em 1em;
        background: var(--#{$instance-id}-secondary-color);
        border-radius: var(--#{$instance-id}-border-radius-2);
        cursor: pointer;
    }

}

@mixin embed-list () {

    @include embed-section;
    display: flex;
    flex-wrap: wrap;
    transition: opacity .25s, transform .25s;

    &-item {
        flex: 0 0 calc(100% / 3 - var(--#{$instance-id}-gutter-width));
    }

}

@mixin embed-list-item () {

    margin-top: calc(var(--#{$instance-id}-gutter-width) / 2);
    margin-bottom: calc(var(--#{$instance-id}-gutter-width) / 2);
    margin-left: calc(var(--#{$instance-id}-gutter-width) / 2);
    margin-right: calc(var(--#{$instance-id}-gutter-width) / 2);
    border-radius: var(--#{$instance-id}-border-radius-2);
    background: var(--#{$instance-id}-white);
    box-sizing: border-box;
    box-shadow: var(--#{$instance-id}-shadow-1);
    overflow: hidden;
    cursor: pointer;
    transform: scale(1);
    transition: transform .25s;

    .is-responsive & {
        @include tablet {
            flex-basis: calc(50% - var(--#{$instance-id}-gutter-width));
        }
        @include mobile {
            flex-basis: calc(100% - var(--#{$instance-id}-gutter-width));
        }
    }

    &:hover {
        transform: scale(1.02);
    }

    &.is-draft {
        background: #fff3f3;
    }

    &-header {
        padding-bottom: 50%;
        position: relative;

        &-image {
            position: absolute;
            top: 0;
            width: 100%;
            height: 100%;
            background-image: var(--#{$instance-id}-thumbnail-placeholder-image);
            background-color: var(--#{$instance-id}-secondary-color);
            background-size: cover;
            background-repeat: no-repeat;
            background-position: center center;
        }
    }

    &-content {
        padding: 1em;

        &-title {
            font-size: 1.2em;
            font-weight: normal;
            color: var(--#{$instance-id}-primary-color);
            margin: 0;
            margin-bottom: 1em;
        }

        &-subtitle {
            font-size: 1em;
            font-weight: normal;
            color: var(--#{$instance-id}-grey-mid);
            margin: 0;
            margin-bottom: 1em;
        }

        &-description {
            margin: 0;
            margin-bottom: 1em;
        }

        &-tags {
            display: flex;
            flex-wrap: wrap;

            &-item {
                margin-right: .5em;
                margin-bottom: .5em;
                line-height: 1em;
                padding: .5em 1em;
                background: var(--#{$instance-id}-secondary-color);
                border-radius: var(--#{$instance-id}-border-radius-2);
            }
        }

        &-attributes {
            display: flex;
            flex-wrap: wrap;
            column-gap: var(--#{$instance-id}-gutter-width);

            &-item {
                flex: 0 0 calc(100% / 4 - var(--#{$instance-id}-gutter-width) * 3 / 4);

                .is-responsive & {
                    @include tablet {
                      flex: 0 0 calc(100% / 2 - var(--#{$instance-id}-gutter-width) * 1 / 2);
                    }
                    @include mobile {
                      flex: 0 0 calc(100% / 1 - var(--#{$instance-id}-gutter-width) * 0 / 1);
                    }
                }
            }
        }

        &-buttons {
            display: none;
            flex-wrap: wrap;
            gap: var(--#{$instance-id}-gutter-width);
        }
    }

}

@mixin embed-actions () {

    @include embed-section;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin-top: var(--#{$instance-id}-gutter-width);
    margin-bottom: var(--#{$instance-id}-gutter-width);

    &-item {
        margin: calc(var(--#{$instance-id}-gutter-width) / 2);
    }

}

@mixin embed-overlay () {

    display: flex;
    justify-content: center;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    overflow: auto;
    z-index: calc(var(--#{$instance-id}-z-index) + 1000);
    background: var(--#{$instance-id}-overlay-background);
    -webkit-backdrop-filter: blur(.5em);
    backdrop-filter: blur(.5em);
    padding: calc(var(--#{$instance-id}-gutter-width) * 2);

    .is-responsive & {
        @include tablet {
            padding: calc(var(--#{$instance-id}-gutter-width));
        }
        @include mobile {
            padding: 0;
        }
    }

}
/* ... */

